--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
+    "@types/swagger-ui-express": "^4.1.7",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.14.0",
